...
              component={MainTabNavigator}
              options={{ headerShown: false }}
            />
            <Stack.Screen
              name="PhotoSource"
              component={PhotoSourceScreen}
              options={{ title: '记录这一杯' }}
            />
            <Stack.Screen
              name="Editor"
              component={RecordEditorScreen}
              options={{ title: '这一杯的样子' }}
            />
...
